--- a/de/trans/trLabeling.dita
+++ b/de/trans/trLabeling.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trLabeling">
-    <title>📓 Dokumentation des OCR-D-GT-labeling</title>
+    <title>📓 Dokumentation des OCR-D-GT-labelling</title>
     <abstract><shortdesc>Die automatisch erstellte Dokumentation gibt einen Überblick über alle Bestandteile des Schemas.</shortdesc></abstract><body>
         <p>Die Dokumentation des OCR-D-GT-labeling Schema wurde automatisch erzeugt. Das Schema basiert auf der Labeling-Ontology
             des PrimaLab. Die Dokumentation wurde mit dem Schema-Dokumentations-Werkzeug des
