--- a/en/trans/impressum.dita
+++ b/en/trans/impressum.dita
@@ -27,13 +27,13 @@
 <p><b>Representatives</b></p>
 <p>HAB Wolfenbüttel is represented by its Director, Prof. Dr. Peter Burschel.</p>
 <p><b>Editor-in-Chief</b></p>
-<p>Andrea Opitz</p>
+<p>Johannes Mangei</p>
 <p>Duke August Library</p>
 <p>Lessingplatz 1</p>
 <p>D-38304 Wolfenbüttel</p>
-      <p>Phone: +49 5331 808-314</p>
-      <p>e-mail: <xref href="mailto:opitz@hab.de" format="html" scope="external"
->opitz@hab.de</xref></p>
+      <p>Phone: +49 5331 808-303</p>
+      <p>e-mail: <xref href="mailto:mangei@hab.de" format="html" scope="external"
+>mangei@hab.de</xref></p>
       </section>
 
 
