--- a/de/trans/impressum.dita
+++ b/de/trans/impressum.dita
@@ -28,13 +28,13 @@ rechtliche Hinweise zur Internetpräsenz des Projekts OCR-D.</p></section>
 <p><b>Vertreter</b></p>
 <p>Die HAB Wolfenbüttel wird vertreten durch ihren Direktor, Herrn Prof. Dr. Peter Burschel.</p>
 <p><b>Redaktionsverantwortliche</b></p>
-<p>Andrea Opitz</p>
+<p>Johannes Mangei</p>
 <p>Herzog August Bibliothek</p>
 <p>Lessingplatz 1</p>
 <p>D-38304 Wolfenbüttel</p>
-      <p>Tel.: +49 5331 808-314</p>
-      <p>e-mail: <xref href="mailto:opitz@hab.de" format="html" scope="external"
->opitz@hab.de</xref></p>
+      <p>Tel.: +49 5331 808-303</p>
+      <p>e-mail: <xref href="mailto:mangei@hab.de" format="html" scope="external"
+>mangei@hab.de</xref></p>
       </section>
 
 
