--- a/de/trans/trBeispiele.dita
+++ b/de/trans/trBeispiele.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="Uebersichten">
   <title>Übersichten und Beispiele</title>
-  <titlealts><navtitle>Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen.</navtitle></titlealts>
+  <titlealts><navtitle>Übersichten und Beispiele von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen.</navtitle></titlealts>
  <body>
 <p>Die angeführten Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen haben nicht
       den Anspruch auf Vollständigkeit. Sondern sind als Beispiele, Vorlagen und der Identifikation
