--- a/de/ocrd_ocrd.ditamap
+++ b/de/ocrd_ocrd.ditamap
@@ -96,6 +96,7 @@
             <topicref href="trans/leerzeichen.dita">
                 <topicref href="trans/tr_level_1_3.dita"/>
                 <topicref href="trans/tr_level_2_3.dita"/>
+                <topicref href="trans/tr_compareLevel1_3.dita"/>
             </topicref>
         </topicref>
         <topicref href="trans/trErsetzungen.dita"/>
