--- a/de/trans/tr_level_1_3.dita
+++ b/de/trans/tr_level_1_3.dita
@@ -12,6 +12,16 @@
             <li>Ebenso schmiegen sich Fußnotenreferenzen ohne Leerraum direkt an das vorangehende
                 Zeichen an. </li>
         </ul>
+        <example id="example_a2r_3wm_rsb"><image href="../../en/trans/images/level_2_3.png"
+                id="image_vxh_rmr_n1b" scale="30"/>
+            <p>
+                <pre id="pre_b2r_3wm_rsb">
+in allem vnſerm Truͤbſal/ das wir auch koͤnnen
+troͤſten/ die da ſind in allerley Truͤbſal mit dem
+Troſt/damit wir von GOTT getroͤſtet wer-
+den<b>/ </b>Hochgelobet vnd geliebet in Ewigkeit/</pre>
+            </p></example>
+        <p>Kommata werden wie im angeführten Beispiel transkribiert.</p>
 <p>Der Abdruck, den ein beim Druckvorgang heruntergefallenen <xref
                 href="https://de.wikipedia.org/wiki/Spatium" format="html" scope="external"
                 >Spatiums</xref> auf der Seite hinterlässt, wird in der Regel nicht
