--- a/de/trans/tr_level_2_3.dita
+++ b/de/trans/tr_level_2_3.dita
@@ -14,17 +14,17 @@
 </p></example>
         <ul id="ul_ufv_bft_qsb">
             <li><lines><b>zu Zeile 1, 2 und 3</b></lines>Das Satzzeichen (Virgil) wird ohne
-                Leerzeichen direkt am vorangegangenden Wort und ohne Leerzeichen danach
+                Leerzeichen direkt am vorangegangenen Wort und ohne Leerzeichen danach
                 transkribiert.</li>
             <li><lines id="lines_yxb_xgt_qsb"><b>zu Zeile 4</b></lines>Das Satzzeichen (Virgil) wird
                 mit einem Leerzeichen davor und einem Leerzeichen danach transkribiert. Eine
                 Unterscheidung der Ausmaße des Leerraumes wird nicht vorgenommen, sondern es wird in
                 der Regel jeweils nur ein Leerzeichen transkribiert.</li>
         </ul>
-        <p>Kommata werden wie im angeführten Beispiel entsprechend der Vorlage transkribiert.</p>
+        <p>Kommata werden wie im angeführten Beispiel transkribiert.</p>
 <p>Anführungszeichen und Klammerungen stehen ohne Leerzeichen direkt an dem durch sie
             eingeschlossenen Text. Ebenso schmiegen sich Fußnotenreferenzen ohne Leerraum direkt an
-            das vorangehende Zeichen an. </p>
+            das vorangegangene Zeichen an. </p>
 <p>Der Abdruck, den ein beim Druckvorgang heruntergefallenen Spatiums auf der Seite hinterlässt,
 wird in der Regel nicht transkribiert. </p>
 <p>Mehrere Punkte hintereinander, die eine Auslassung verdeutlichen sollen, werden von jeweils einem
