--- a/en/trans/ocr_d_koordinationsgremium_codierung.dita
+++ b/en/trans/ocr_d_koordinationsgremium_codierung.dita
@@ -18,15 +18,20 @@
 <colspec colnum="8" colname="col8"/>
 <tbody>
 <row>
-<entry/>
-<entry namest="col2" nameend="col4"><b>Pre-composed Character (used in Aletheia)</b></entry>
-<entry/>
-<entry/>
-<entry namest="col7" nameend="col8">
-<p><b>Decomposed Character </b></p>
-<p><b>(only for reference)</b></p>
-</entry>
+<entry namest="col1" nameend="col6"><b>Level 3</b></entry>
+<entry namest="col7" nameend="col8"><b>Level 2</b></entry>
 </row>
+                        <row>
+                            <entry/>
+                            <entry namest="col2" nameend="col4"><b>Pre-composed Character (used in
+                                    Aletheia)</b></entry>
+                            <entry/>
+                            <entry/>
+                            <entry namest="col7" nameend="col8">
+                                <p><b>Decomposed Character </b></p>
+                                <p><b>(only for reference)</b></p>
+                            </entry>
+                        </row>
 <row>
 <entry><b>Glyph </b></entry>
 <entry><b>Unicode </b></entry>
