--- a/en/trans/tr_compareLevel1_3.dita
+++ b/en/trans/tr_compareLevel1_3.dita
@@ -12,7 +12,11 @@
                     <colspec colname="c2" colnum="2" colwidth="1*"/>
                     
                     <tbody><row>
-                        <entry namest="c1" nameend="c2"><image href="images/level_2_3.png" id="image_vxh_rmr_n1b" scale="30" align="center"/></entry>
+                        <entry namest="c1" nameend="c2"><b>Template</b></entry>
+                        </row>
+                        <row>
+                            <entry namest="c1" nameend="c2"><image href="images/level_2_3.png"
+                                    id="image_vxh_rmr_n1b" scale="30" align="center"/></entry>
                         </row>
                         <row>
                             <entry><b>Level 1 and 2</b></entry>
