add english and start

--- a/en/trans/tr_level_1_3.dita
+++ b/en/trans/tr_level_1_3.dita
@@ -6,12 +6,12 @@
         <p>In level one and two, a normalisation of the spaces is carried out. This applies to the
             following areas:</p>
         <ul id="ul_hk5_1wm_rsb">
-            <li> Punctuation marks are placed directly at the preceding word without a space. This
-                is followed by a space.</li>
+            <li>Punctuation marks are placed directly at the preceding word without a space. This is
+                followed by a space.</li>
             <li>Inverted commas and parentheses are placed without spaces directly at the text they
-                enclose. </li>
+                enclose.</li>
             <li>Similarly, footnote references nestle directly against the preceding character
-                without a space. </li>
+                without a space.</li>
         </ul>
         <example id="example_a2r_3wm_rsb"><image href="images/level_2_3.png" id="image_vxh_rmr_n1b"
                 scale="30"/>
